src/parser.rs
//! # parser
//! 構文解析器
// LALRPOP(https://github.com/lalrpop/lalrpop)でも良いかも...?
// follow setの判定は行わないことにする
// (次のトークンでfirst setに含まれないとして弾く)

use crate::ast::*;
use crate::errors;
use crate::token::Token;
use crate::tokenizer::Tokenizer;
use std::io;

pub struct Parser {
    tokenizer: Tokenizer,
}

impl Parser {
    /// generate new Parser
    pub fn new(file_name: &str) -> io::Result<Parser> {
        let tokenizer = Tokenizer::new(file_name)?;
        Ok(Parser {
            tokenizer: tokenizer,
        })
    }

    pub fn parse(&mut self) -> AST {
        let mut tree: Vec<ASTStmt> = Vec::new();
        self.tokenizer.next_token();
        loop {
            match self.tokenizer.get_current_token() {
                Token::NEWLINE => {
                    continue;
                }
                Token::EOF => {
                    break;
                }
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE
                | Token::DEL
                | Token::PASS
                | Token::BREAK
                | Token::CONTINUE
                | Token::RETURN
                | Token::GLOBAL
                | Token::PRINT
                | Token::IF
                | Token::WHILE
                | Token::FOR
                | Token::DEF => tree.push(self.parse_stmt()),
                _ => errors::unexpected_token(&self),
            };
        }
        tree
    }

    fn parse_stmt(&mut self) -> ASTStmt {
        match self.tokenizer.get_current_token() {
            Token::IF | Token::WHILE | Token::FOR | Token::DEF => self.parse_compound_stmt(),
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT => self.parse_simple_stmt(),
            _ => errors::unexpected_token(&self),
        }
    }

    fn parse_compound_stmt(&mut self) -> ASTStmt {
        match self.tokenizer.get_current_token() {
            Token::IF => self.parse_if_stmt(false),
            Token::WHILE => self.parse_while_stmt(),
            Token::FOR => self.parse_for_stmt(),
            Token::DEF => self.parse_funcdef(),
            _ => errors::unexpected_token(&self),
        }
    }

    fn parse_if_stmt(&mut self, is_orelse: bool) -> ASTStmt {
        // orelseで呼ばれた場合、'if' はない
        if !is_orelse {
            self.eat(&Token::IF);
        }
        let test = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_test(),
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::COLON);
        let body = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT
            | Token::NEWLINE => self.parse_suite(),
            _ => errors::unexpected_token(&self),
        };
        let orelse: Vec<ASTStmt> = match self.tokenizer.get_current_token() {
            Token::ELIF => {
                // elifをelse ifに分解する(elifをeatした後、if文として再パース)
                self.eat(&Token::ELIF);
                match self.tokenizer.get_current_token() {
                    Token::NOT
                    | Token::PLUS
                    | Token::MINUS
                    | Token::TILDE
                    | Token::LPAREN
                    | Token::LBRACE
                    | Token::LBRACKET
                    | Token::ID(_)
                    | Token::INT(_)
                    | Token::FLOAT(_)
                    | Token::STRING(_)
                    | Token::NONE
                    | Token::TRUE
                    | Token::FALSE => vec![self.parse_if_stmt(true)],
                    _ => errors::unexpected_token(&self),
                }
            }
            Token::ELSE => {
                // elseのsuite
                self.eat(&Token::ELSE);
                self.eat(&Token::COLON);
                match self.tokenizer.get_current_token() {
                    Token::NOT
                    | Token::PLUS
                    | Token::MINUS
                    | Token::TILDE
                    | Token::LPAREN
                    | Token::LBRACE
                    | Token::LBRACKET
                    | Token::ID(_)
                    | Token::INT(_)
                    | Token::FLOAT(_)
                    | Token::STRING(_)
                    | Token::NONE
                    | Token::TRUE
                    | Token::FALSE
                    | Token::DEL
                    | Token::PASS
                    | Token::BREAK
                    | Token::CONTINUE
                    | Token::RETURN
                    | Token::GLOBAL
                    | Token::PRINT
                    | Token::NEWLINE => self.parse_suite(),
                    _ => errors::unexpected_token(&self),
                }
            }
            _ => Vec::new(), // 特に何もしない
        };
        ASTStmt::If(test, body, orelse)
    }

    fn parse_simple_stmt(&mut self) -> ASTStmt {
        let small_stmt = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT => self.parse_small_stmt(),
            _ => errors::unexpected_token(&self),
        };
        // 最後の改行の省略を許容
        if *self.tokenizer.get_current_token() != Token::EOF {
            self.eat(&Token::NEWLINE);
        }
        small_stmt
    }

    fn parse_test(&mut self) -> ASTExpr {
        let body = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_or_test(),
            _ => errors::unexpected_token(&self),
        };
        // ternary operator
        if *self.tokenizer.get_current_token() == Token::IF {
            self.eat(&Token::IF);
            let test = match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_or_test(),
                _ => errors::unexpected_token(&self),
            };
            self.eat(&Token::ELSE);
            let orelse = match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_test(),
                _ => errors::unexpected_token(&self),
            };
            ASTExpr::IfExp(Box::new(test), Box::new(body), Box::new(orelse))
        } else {
            body
        }
    }

    fn parse_suite(&mut self) -> Vec<ASTStmt> {
        match self.tokenizer.get_current_token() {
            Token::NEWLINE => {
                self.eat(&Token::NEWLINE);
                self.eat(&Token::INDENT);
                let mut stmt: Vec<ASTStmt> = Vec::new();
                loop {
                    match self.tokenizer.get_current_token() {
                        Token::NOT
                        | Token::PLUS
                        | Token::MINUS
                        | Token::TILDE
                        | Token::LPAREN
                        | Token::LBRACE
                        | Token::LBRACKET
                        | Token::ID(_)
                        | Token::INT(_)
                        | Token::FLOAT(_)
                        | Token::STRING(_)
                        | Token::NONE
                        | Token::TRUE
                        | Token::FALSE
                        | Token::DEL
                        | Token::PASS
                        | Token::BREAK
                        | Token::CONTINUE
                        | Token::RETURN
                        | Token::GLOBAL
                        | Token::PRINT
                        | Token::IF
                        | Token::WHILE
                        | Token::FOR
                        | Token::DEF => {
                            stmt.push(self.parse_stmt());
                        }
                        Token::DEDENT => break,
                        _ => errors::unexpected_token(&self),
                    };
                }
                self.eat(&Token::DEDENT);
                stmt
            }
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT => vec![self.parse_small_stmt()],
            _ => errors::unexpected_token(&self),
        }
    }

    fn parse_while_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::WHILE);
        let test = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_test(),
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::COLON);
        let body = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT
            | Token::NEWLINE => self.parse_suite(),
            _ => errors::unexpected_token(&self),
        };
        ASTStmt::While(test, body)
    }

    fn parse_for_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::FOR);
        let target = match self.tokenizer.get_current_token() {
            Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => {
                let mut exprlist = self.parse_exprlist();
                if exprlist.len() == 1 {
                    exprlist.swap_remove(0)
                } else {
                    ASTExpr::Tuple(exprlist)
                }
            }
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::IN);
        let iter = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_testlist(),
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::COLON);
        let body = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT
            | Token::NEWLINE => self.parse_suite(),
            _ => errors::unexpected_token(&self),
        };
        ASTStmt::For(target, iter, body)
    }

    fn parse_funcdef(&mut self) -> ASTStmt {
        self.eat(&Token::DEF);
        let name = self.eat_id();
        let arguments = match self.tokenizer.get_current_token() {
            Token::LPAREN => self.parse_parameters(),
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::COLON);
        let body = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE
            | Token::DEL
            | Token::PASS
            | Token::BREAK
            | Token::CONTINUE
            | Token::RETURN
            | Token::GLOBAL
            | Token::PRINT
            | Token::NEWLINE => self.parse_suite(),
            _ => errors::unexpected_token(&self),
        };
        ASTStmt::FuncDef(name, arguments, body)
    }

    fn parse_small_stmt(&mut self) -> ASTStmt {
        match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_expr_stmt(),
            Token::DEL => self.parse_del_stmt(),
            Token::PASS => self.parse_pass_stmt(),
            Token::BREAK | Token::CONTINUE | Token::RETURN => self.parse_flow_stmt(),
            Token::GLOBAL => self.parse_global_stmt(),
            Token::PRINT => self.parse_print_stmt(),
            _ => errors::unexpected_token(&self),
        }
    }

    fn parse_or_test(&mut self) -> ASTExpr {
        let mut and_test: Vec<ASTExpr> = Vec::new();
        and_test.push(match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_and_test(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::OR {
            self.eat(&Token::OR);
            and_test.push(match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_and_test(),
                _ => errors::unexpected_token(&self),
            });
        }
        if and_test.len() == 1 {
            and_test.swap_remove(0)
        } else {
            ASTExpr::BoolOp(ASTBoolOp::Or, and_test)
        }
    }

    fn parse_exprlist(&mut self) -> Vec<ASTExpr> {
        let mut res: Vec<ASTExpr> = Vec::new();
        res.push(match self.tokenizer.get_current_token() {
            Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_expr(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::COMMA {
            self.eat(&Token::COMMA);
            res.push(match self.tokenizer.get_current_token() {
                Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_expr(),
                _ => break,
            });
        }
        res
    }

    fn parse_testlist(&mut self) -> ASTExpr {
        let mut res: Vec<ASTExpr> = Vec::new();
        res.push(match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_test(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::COMMA {
            self.eat(&Token::COMMA);
            res.push(match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_test(),
                _ => break,
            });
        }
        if res.len() == 1 {
            res.swap_remove(0)
        } else {
            ASTExpr::Tuple(res)
        }
    }

    fn parse_parameters(&mut self) -> ASTArguments {
        self.eat(&Token::LPAREN);
        let typedargslist = match self.tokenizer.get_current_token() {
            Token::ID(_) => self.parse_typedargslist(),
            Token::RPAREN => ASTArguments::new(),
            _ => errors::unexpected_token(&self),
        };
        self.eat(&Token::RPAREN);
        typedargslist
    }

    fn parse_expr_stmt(&mut self) -> ASTStmt {
        let mut testlist_star_expr = match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => vec![self.parse_testlist_star_expr()],
            _ => errors::unexpected_token(&self),
        };
        if *self.tokenizer.get_current_token() == Token::EQ {
            self.eat(&Token::EQ);
            let mut tmp = match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_testlist_star_expr(),
                _ => errors::unexpected_token(&self),
            };
            while *self.tokenizer.get_current_token() == Token::EQ {
                testlist_star_expr.push(tmp);
                self.eat(&Token::EQ);
                tmp = match self.tokenizer.get_current_token() {
                    Token::NOT
                    | Token::PLUS
                    | Token::MINUS
                    | Token::TILDE
                    | Token::LPAREN
                    | Token::LBRACE
                    | Token::LBRACKET
                    | Token::ID(_)
                    | Token::INT(_)
                    | Token::FLOAT(_)
                    | Token::STRING(_)
                    | Token::NONE
                    | Token::TRUE
                    | Token::FALSE => self.parse_testlist_star_expr(),
                    _ => errors::unexpected_token(&self),
                };
            }
            ASTStmt::Assign(testlist_star_expr, tmp)
        } else {
            ASTStmt::Expr(testlist_star_expr.swap_remove(0))
        }
    }

    fn parse_del_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::DEL);
        ASTStmt::Delete(match self.tokenizer.get_current_token() {
            Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_exprlist(),
            _ => errors::unexpected_token(&self),
        })
    }

    fn parse_pass_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::PASS);
        ASTStmt::Pass
    }

    fn parse_flow_stmt(&mut self) -> ASTStmt {
        match self.tokenizer.get_current_token() {
            Token::BREAK => self.parse_break_stmt(),
            Token::CONTINUE => self.parse_continue_stmt(),
            Token::RETURN => self.parse_return_stmt(),
            _ => errors::unexpected_token(&self),
        }
    }

    fn parse_global_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::GLOBAL);
        let mut name: Vec<String> = Vec::new();
        name.push(match self.tokenizer.get_current_token() {
            Token::ID(name) => name.to_owned(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::COMMA {
            self.eat(&Token::COMMA);
            name.push(match self.tokenizer.get_current_token() {
                Token::ID(name) => name.to_owned(),
                _ => break,
            });
        }
        ASTStmt::Global(name)
    }

    fn parse_print_stmt(&mut self) -> ASTStmt {
        self.eat(&Token::PRINT);
        let mut values = Vec::new();
        let mut nl = true;
        values.push(match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_test(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::COMMA {
            self.eat(&Token::COMMA);
            values.push(match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_test(),
                _ => {
                    nl = false;
                    break;
                }
            });
        }
        ASTStmt::Print(values, nl)
    }

    fn parse_and_test(&mut self) -> ASTExpr {
        let mut not_test: Vec<ASTExpr> = Vec::new();
        not_test.push(match self.tokenizer.get_current_token() {
            Token::NOT
            | Token::PLUS
            | Token::MINUS
            | Token::TILDE
            | Token::LPAREN
            | Token::LBRACE
            | Token::LBRACKET
            | Token::ID(_)
            | Token::INT(_)
            | Token::FLOAT(_)
            | Token::STRING(_)
            | Token::NONE
            | Token::TRUE
            | Token::FALSE => self.parse_not_test(),
            _ => errors::unexpected_token(&self),
        });
        while *self.tokenizer.get_current_token() == Token::AND {
            self.eat(&Token::AND);
            not_test.push(match self.tokenizer.get_current_token() {
                Token::NOT
                | Token::PLUS
                | Token::MINUS
                | Token::TILDE
                | Token::LPAREN
                | Token::LBRACE
                | Token::LBRACKET
                | Token::ID(_)
                | Token::INT(_)
                | Token::FLOAT(_)
                | Token::STRING(_)
                | Token::NONE
                | Token::TRUE
                | Token::FALSE => self.parse_not_test(),
                _ => errors::unexpected_token(&self),
            });
        }
        if not_test.len() == 1 {
            not_test.swap_remove(0)
        } else {
            ASTExpr::BoolOp(ASTBoolOp::And, not_test)
        }
    }
